<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_wholeGameResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@drawable/bg_receipt"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txt_game_kind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_game_1_standUp"
            style="@style/style_receipt_kind"
            android:background="@drawable/bg_receipt_kind"
            />
        <TextView
            android:id="@+id/txt_game_total_sum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:text="@string/total_sum"
            style="@style/style_receipt_unit"
            />
        <TextView
            android:id="@+id/txt_game_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/zero"
            style="@style/style_receipt_unit"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txt_game_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:text="@string/unit"
            style="@style/style_receipt_unit"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/imgBtn_game_assignPlayer"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:src="@drawable/baseline_groups_24"
            android:background="@color/transparent"
            app:tint="@color/ksd_green" />

        <ImageButton
            android:id="@+id/imgBtn_game_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/outline_cancel_24"
            android:background="@color/transparent"
            app:tint="@color/ksd_red" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/bg_game_surplus"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txt_game_surplus_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surplus"
                    style="@style/style_game_surplus.title"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/txt_game_surplus_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surplus_sum"
                    style="@style/style_game_surplus.sum"

                    />

                <TextView
                    android:id="@+id/txt_game_surplus_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    style="@style/style_game_surplus.amount"

                    />
                <TextView
                    android:id="@+id/txt_game_surplus_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    style="@style/style_game_surplus.sum"

                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_game_surplus_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:overScrollMode="never"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/bg_game_deficit"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txt_game_deficit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deficit"
                    style="@style/style_game_deficit.title"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/txt_game_deficit_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deficit_sum"
                    style="@style/style_game_deficit.sum"
                    />

                <TextView
                    android:id="@+id/txt_game_deficit_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    style="@style/style_game_deficit.amount"

                    />
                <TextView
                    android:id="@+id/txt_game_deficit_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    style="@style/style_game_deficit.sum"

                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_game_deficit_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:overScrollMode="never"
                />
        </LinearLayout>


    </LinearLayout>




</LinearLayout>
