<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_calculation_result_detail_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginStart="3dp"
                android:textSize="16sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_calculation_result_detail_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="5dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/dotted_line_horizontal"
                />
            <TextView
                android:id="@+id/txt_cal_res_detail_details_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_money_unit"
                android:textAlignment="textEnd"
                android:layout_marginEnd="12dp"
                android:textSize="18sp"
                />

        </LinearLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculation"
                android:layout_marginStart="3dp"
                android:textSize="16sp"
                />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcy_calculation_result_detail_calculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="5dp"
            />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/dotted_line_horizontal"
                />
            <TextView
                android:id="@+id/txt_cal_res_detail_calculation_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_money_unit"
                android:textAlignment="textEnd"
                android:layout_marginEnd="12dp"
                android:textSize="18sp"
                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>